--- a/src/components/create_movie_block/createOrEditMovieBlock.module.css
+++ b/src/components/create_movie_block/createOrEditMovieBlock.module.css
@@ -18,7 +18,7 @@
      display: flex;
      flex-direction: column;
      overflow: auto;
-     max-height: 72%;
+     height: 100%;
      padding: 1rem;
 }
 
@@ -45,7 +45,8 @@
 .inputData > div > textarea {
      width: 85%;
      height: 10vh;
-     font-size: 0.9rem;;
+     font-size: 0.9rem;
+     resize: none;
 }
 
 .genresList{
@@ -93,4 +94,10 @@
 }
 .cancelBtn:hover{
      background-color: rgba(66, 139, 249, 0.20);
+}
+
+div .error{
+     margin-top: 0.5rem;
+     font-size: 1rem;
+     color: red;
 }
